--- a/packages/local/breeze-night-material/sass/save.scss
+++ b/packages/local/breeze-night-material/sass/save.scss
@@ -128,7 +128,7 @@ $ui-darkbase-textfield-trigger-hovered-icon-color: #4ea5ff;
 $ui-darkbase-textfield-trigger-icon-color: #FFFFFF;
 
 $ui-employee-worktime-records-grid-checkcell-checkbox-color: #ffffff;
-$ui-employee-worktime-records-grid-checkcell-checkbox-size: 16pt;
+$ui-employee-worktime-records-grid-checkcell-checkbox-size: 14pt;
 $ui-employee-worktime-records-grid-checkcell-checked-checkbox-color: #ffffff;
 $ui-employee-worktime-records-grid-checkcell-disabled-checkbox-color: #ffffff;
 $ui-employee-worktime-records-grid-checkcell-focused-checkbox-color: #ffffff;
@@ -245,7 +245,7 @@ $ui-employeeinfo-radio-radiofield-checkbox-color: #96A0AE;
 $ui-employeeinfo-radio-radiofield-checked-checkbox-color: #ffffff;
 $ui-employeeinfo-radio-radiofield-focused-checkbox-color: #FFFFFF;
 $ui-employeeinfo-shift-grid-checkcell-checkbox-color: #FFFFFF;
-$ui-employeeinfo-shift-grid-checkcell-checkbox-size: 16pt;
+$ui-employeeinfo-shift-grid-checkcell-checkbox-size: 14pt;
 $ui-employeeinfo-shift-grid-checkcell-checked-checkbox-color: #FFFFFF;
 $ui-employeeinfo-shift-grid-checkcell-disabled-checkbox-color: #FFFFFF;
 $ui-employeeinfo-shift-grid-checkcell-focused-checkbox-color: #FFFFFF;
